@@ -18,6 +18,10 @@ Core and Builtins
 Library
 -------
 
+- Issues #814253, #9179: Warnings now are raised when group references and
+  conditional group references are used in lookbehind assertions in regular
+  expressions.
+
 - Issue #23215: Multibyte codecs with custom error handlers that ignores errors
   consumed too much memory and raised SystemError or MemoryError.
   Original patch by Aleksi Torhamo.
